Changes from 0.3 to current development state:

- silence warnings produced by PHP 5
- added userdef mw_wiki_name and show it in page title
- bugfixes
- ... and more

Changes from 0.2 to 0.3:

- heavily restructualized source
- easy adding of new functionality with extensions
- main page called Main Page and not MainPage
- more Wiki functions
- conditional directives #IF and #IFEMPTY
- UI header and footer are stored in Wiki
  including CSS and JS files
- fully automated install/upgrade script
- XML export/import
- pages can be renamed with old page redirecting to the new one
- uploaded text files can be edited inside the browser
- visible support for namespaces (e.g. in list of all pages)
- experimental filesystem storage
- bugfixes
- ... and more

Changes from 0.1 to 0.2:

- new directory structure
- compatibility with MySQL-4.1.x
- directive #TITLE
- simple forms support
- horizontal rule Wiki markup ('---')
- Table of Contents and #NOTOC directive
- page inclusion
- Wiki functions support
- Wiki variables
- user_info Wiki function
- configurable anonymous access
- configurable non-admin edits
- allow fragments in internal links
- edit preview
- file uploads
- allow linking to specific revision
- ... and more
