@@ -2,6 +2,7 @@ Changes from 0.3 to current development state:
 
 - silence warnings produced by PHP 5
 - added userdef mw_wiki_name and show it in page title
+- do not import/update unchanged data
 - bugfixes
 - ... and more
 
